--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "langchain": "^1.0.3",
     "openai": "^6.8.1",
     "postgres": "^3.4.7",
+    "x402-fetch": "^0.7.0",
     "x402-hono": "^0.7.1",
+    "x402-solana": "^0.1.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
