--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.28",
+    "@ai-sdk/groq": "^2.0.28",
     "@ai-sdk/openai": "^2.0.64",
     "@hono/node-server": "^1.19.6",
     "@langchain/community": "^1.0.0",
@@ -15,6 +16,7 @@
     "ai": "^5.0.88",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "groq-sdk": "^0.34.0",
     "hono": "^4.10.4",
     "langchain": "^1.0.3",
     "openai": "^6.8.1",
